# cmake_external_lib_template

./: .gitignore  CMakeLists.txt  README.md  config.yaml  main.cpp
